add pseudo maturity ref

--- a/cercospora.bib
+++ b/cercospora.bib
@@ -1,4 +1,33 @@
 
+@article{salam_blackleg_2003,
+	title = {Blackleg {Sporacle}: {A} {Model} for {Predicting} {Onset} of {Pseudothecia} {Maturity} and {Seasonal} {Ascospore} {Showers} in {Relation} to {Blackleg} of {Canola}},
+	volume = {93},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/18944090},
+	doi = {10.1094/PHYTO.2003.93.9.1073},
+	abstract = {ABSTRACT A simple model has been developed to predict the onset of pseudothecia maturity and seasonal ascospore showers in relation to blackleg disease in canola, caused by the fungus Leptosphaeria maculans. The model considers a combination of two weather factors, daily mean temperature and daily total rainfall, to drive progress of maturity of pseudothecia on the infested canola stubble left from past crops. Each day is categorized as suitable or not suitable for progress of the maturation process. The onset of pseudothecia maturity occurs when approximately 43 suitable days have occurred. Following the onset of maturity, ascospore showers are triggered when daily rainfall exceeds a threshold. The model satisfactorily predicted the timing of the onset of pseudothecia maturity when tested with 3 years of field observations at four locations in Western Australia, which characteristically has a Mediterranean climate. The model also agreed reasonably well with the daily pattern of ascospore release observed in two locations. Sensitivity analysis was performed to show the relative importance of the parameters that describe the onset of pseudothecia maturity.},
+	number = {9},
+	journal = {Phytopathology},
+	author = {Salam, M. U. and Khangura, R. K. and Diggle, A. J. and Barbetti, M. J.},
+	month = sep,
+	year = {2003},
+	pages = {1073--1081},
+	file = {2003_Salam et al._Blackleg Sporacle A Model for Predicting Onset of Pseudothecia Maturity and Seasonal Ascospore Showers in Relation to:C\:\\Users\\uqpmello\\Zotero\\storage\\7SIKP4KQ\\2003_Salam et al._Blackleg Sporacle A Model for Predicting Onset of Pseudothecia Maturity and Seasonal Ascospore Showers in Relation to.pdf:application/pdf},
+}
+
+@article{salam_g1_2011,
+	title = {G1 {Blackspot} {Manager} model predicts the maturity and release of ascospores in relation to ascochyta blight on field pea},
+	volume = {40},
+	doi = {10.1007/s13313-011-0035-0},
+	abstract = {A simple model, G1 Blackspot Manager, has been developed to predict the seasonal pattern of release of ascospores in relation to ascochyta blight in field pea. The model considers a combination of two weather factors, daily mean temperature and daily total rainfall, to drive progress of maturity of pseudothecia on infested field pea stubble from past crops. Each day is categorised as suitable or not suitable for continuation of the maturation process. The onset of pseudothecial maturity has been found to take place when approximately ten suitable days have occurred. Following the onset of maturity, ascospore release is triggered when daily rainfall exceeds a threshold. The model was satisfactorily calibrated using three datasets from Western Australia. The calibrated model performed well when independently tested with 21 datasets, 17 from Western Australia and 4 from South Australia. It is concluded that G1 Blackspot Manager model has the potential to be used to formulate sowing guides for field pea in southern Australia that minimise the risk of ascochyta blight.},
+	number = {6},
+	journal = {Australasian Plant Pathology},
+	author = {Salam, Moin U and Galloway, Jean and Macleod, William J and Davidson, Jennifer A and Seymour, Mark and Pritchard, Ian and Salam, Kawsar P and Diggle, Art J and Maling, Tim},
+	year = {2011},
+	keywords = {Ascochyta blight, Ascospore shower, Blackspot, Didymella pinodes, Didymella pisi, Disease forecasting, Field pea, Introduction, Mycosphaerella pinodes, Phoma koolunga, Phoma medicaginis var pinodella, Quantitative epidemiology},
+	pages = {621--631},
+	file = {2011_Salam et al._G1 Blackspot Manager model predicts the maturity and release of ascospores in relation to ascochyta blight on field pe:C\:\\Users\\uqpmello\\Zotero\\storage\\U67NKTGD\\2011_Salam et al._G1 Blackspot Manager model predicts the maturity and release of ascospores in relation to ascochyta blight on field pe.pdf:application/pdf},
+}
+
 @article{silva_cercospora_2018,
 	title = {Cercospora leaf spot in {Toona} ciliata: {Epidemiology} and infection process of {Cercospora} cf. alchemillicola},
 	volume = {48},
@@ -154,4 +183,11 @@
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2338.1991.tb01284.x},
 	pages = {527--531},
 	file = {Full Text PDF:C\:\\Users\\uqpmello\\Zotero\\storage\\VV43ELQY\\Rossi and Battilani - 1991 - CERCOPRI a forecasting model for primary infectio.pdf:application/pdf;Snapshot:C\:\\Users\\uqpmello\\Zotero\\storage\\H2PWM75P\\j.1365-2338.1991.tb01284.html:text/html},
+}
+
+@article{vereijssen_cercospora_nodate,
+	title = {Cercospora leaf spot in sugar beet : epidemiology, life cycle components and disease management},
+	language = {en},
+	author = {Vereijssen, Jessica},
+	file = {Vereijssen - Cercospora leaf spot in sugar beet  epidemiology,.pdf:C\:\\Users\\uqpmello\\Zotero\\storage\\LDAQPVYP\\Vereijssen - Cercospora leaf spot in sugar beet  epidemiology,.pdf:application/pdf},
 }
