redoc. passing all Errors and warns in check

--- a/Notes - Sim model for management C.beticola in SB.Rmd
+++ b/Notes - Sim model for management C.beticola in SB.Rmd
@@ -12,13 +12,13 @@ bibliography: cercospora.bib
 
 *Cercospora beticola* is a common limiting factor in the growth and production of
 sugarbeet (*Beta vulgaris*). 
-Limiting the impact of the pathogen on plant productivity, biomass accumulation 
-and subsequently sugar yields requires fungicide applications to be applied at 
+Managing the impact of the pathogen on plant productivity, biomass accumulation 
+and subsequenty sugar yields requires fungicide applications to be applied at 
 first incidence in the field.
 Predicting the initial incidence of cercospora leaf spot in the field has been 
 the focus of plant disease models since 1972 (@rossi_cercopri_1991).  
 
-Appearance of the disease is seasonal between the middle of Jun to the middle of 
+Appearance of the disease is seasonal between the middle of June to the middle of 
 August in southern Europe (@rossi_cercopri_1991) and is most likely to occur in 
 early July.
 This pattern might be explained by the temperature and moisture requirements for 
