add CERCBET3 paper

--- a/cercospora.bib
+++ b/cercospora.bib
@@ -23,7 +23,7 @@
 	journal = {Australasian Plant Pathology},
 	author = {Salam, Moin U and Galloway, Jean and Macleod, William J and Davidson, Jennifer A and Seymour, Mark and Pritchard, Ian and Salam, Kawsar P and Diggle, Art J and Maling, Tim},
 	year = {2011},
-	keywords = {Ascochyta blight, Ascospore shower, Blackspot, Didymella pinodes, Didymella pisi, Disease forecasting, Field pea, Introduction, Mycosphaerella pinodes, Phoma koolunga, Phoma medicaginis var pinodella, Quantitative epidemiology},
+	keywords = {Quantitative epidemiology, Introduction, Mycosphaerella pinodes, Ascochyta blight, Ascospore shower, Blackspot, Field pea, Didymella pinodes, Didymella pisi, Disease forecasting, Phoma koolunga, Phoma medicaginis var pinodella},
 	pages = {621--631},
 	file = {2011_Salam et al._G1 Blackspot Manager model predicts the maturity and release of ascospores in relation to ascochyta blight on field pe:C\:\\Users\\uqpmello\\Zotero\\storage\\U67NKTGD\\2011_Salam et al._G1 Blackspot Manager model predicts the maturity and release of ascospores in relation to ascochyta blight on field pe.pdf:application/pdf},
 }
@@ -190,4 +190,22 @@
 	language = {en},
 	author = {Vereijssen, Jessica},
 	file = {Vereijssen - Cercospora leaf spot in sugar beet  epidemiology,.pdf:C\:\\Users\\uqpmello\\Zotero\\storage\\LDAQPVYP\\Vereijssen - Cercospora leaf spot in sugar beet  epidemiology,.pdf:application/pdf},
+}
+
+@article{racca_cercbet_2007,
+	title = {{CERCBET} 3 – a forecaster for epidemic development of {Cercospora} beticola*},
+	volume = {37},
+	issn = {1365-2338},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2338.2007.01136.x},
+	doi = {10.1111/j.1365-2338.2007.01136.x},
+	abstract = {Cercospora beticola is the most prevalent and damaging fungal disease in German sugar beet growing. Control strategies are based on action thresholds. A model has been developed which forecasts epidemic development (expressed as disease incidence) and signals when action thresholds are overridden. The plot-specific model, CERCBET 3 uses as input meteorological parameters (temperature, relative humidity), easily accessible agronomic field characteristics and a single recording of C. beticola disease incidence. Extensive validation in 2001–03 showed that, in 80–95\% of the cases, CERCBET 3 correctly forecasted the dates when thresholds were overridden. Cultivar diversity in German sugar beet growing is increasing, thus a module has been included into CERCBET 3 which reflects susceptibility to C. beticola by introducing a sporulation factor. In some cases a second or even third fungicide treatment could be necessary to control Cercospora leaf spot and so a further module which models fungicide efficacy has been elaborated. CERCBET 3 is available for sugar beet growers in an interactive form on the Internet platform ISIP, which is provided by the governmental crop protection services of Germany.},
+	language = {en},
+	number = {2},
+	urldate = {2023-06-13},
+	journal = {EPPO Bulletin},
+	author = {Racca, P. and Jörg, E.},
+	year = {2007},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2338.2007.01136.x},
+	pages = {344--349},
+	file = {Full Text PDF:C\:\\Users\\uqpmello\\Zotero\\storage\\PKGHVMPP\\Racca and Jörg - 2007 - CERCBET 3 – a forecaster for epidemic development .pdf:application/pdf;Snapshot:C\:\\Users\\uqpmello\\Zotero\\storage\\W5RFHQ53\\j.1365-2338.2007.01136.html:text/html},
 }
