--- a/Notes - Sim model for management C.beticola in SB.Rmd
+++ b/Notes - Sim model for management C.beticola in SB.Rmd
@@ -7,13 +7,13 @@ author:
   - Dr. Rene Heim, University of Gottingen
 date: "`r Sys.Date()`"
 output: html_document
-bibliography: cercospora.bib
+bibliography: inst/cercospora.bib
 ---
 
 *Cercospora beticola* is a common limiting factor in the growth and production of
 sugarbeet (*Beta vulgaris*). 
 Managing the impact of the pathogen on plant productivity, biomass accumulation 
-and subsequenty sugar yields requires fungicide applications to be applied at 
+and subsequently sugar yields requires fungicide applications to be applied at 
 first incidence in the field.
 Predicting the initial incidence of cercospora leaf spot in the field has been 
 the focus of plant disease models since 1972 (@rossi_cercopri_1991).  
@@ -26,4 +26,12 @@ production of conidiophores from pseudostromata surviving in the soil.
 This is similar to requirements for *Didimella pinoides* (@salam_g1_2011) or 
 *Leptosphaeria maculans* () pseudothecial maturity and ascospore production
 (@salam_blackleg_2003, @salam_g1_2011).
+
+
+Genotype specific effects of partitioning to above ground. 
+
+Racca (@racca_cercbet_2007) CERCBET 3 reports excellent estimation for the onset 
+of Cercospora and action thresholds for a fungicidal intervention. Yet the report
+stops short of reporting the coefiencts or formulas for reproducing the work.  
+
 
