--- a/inst/cercospora.bib
+++ b/inst/cercospora.bib
@@ -209,3 +209,38 @@
 	pages = {344--349},
 	file = {Full Text PDF:C\:\\Users\\uqpmello\\Zotero\\storage\\PKGHVMPP\\Racca and Jörg - 2007 - CERCBET 3 – a forecaster for epidemic development .pdf:application/pdf;Snapshot:C\:\\Users\\uqpmello\\Zotero\\storage\\W5RFHQ53\\j.1365-2338.2007.01136.html:text/html},
 }
+
+@article{wolf_factors_2005,
+	title = {Factors {Affecting} the {Onset} of {Cercospora} {Leaf} {Spot} {Epidemics} in {Sugar} {Beet} and {Establishment} of {Disease}-{Monitoring} {Thresholds}},
+	volume = {95},
+	issn = {0031-949X},
+	url = {https://apsjournals.apsnet.org/doi/abs/10.1094/PHYTO-95-0269},
+	doi = {10.1094/PHYTO-95-0269},
+	abstract = {Severe Cercospora leaf spots epidemics in sugar beet during the late 1980s and early 1990s in southern Germany prompted us to initiate investigations on the epidemiology of the causal agent, Cercospora beticola. The data set involved 69 field trials (1993 to 2003) focusing on factors affecting the epidemic onset of this disease. Observations were made at weekly intervals, recording the calendar week when canopy closure occurred (growth stage according to BBCH scale = 39) and symptom development by assessing the percentage of infected leaf area on a single-leaf basis (n = 40 plants). These monitoring trials revealed that epidemic onset varied between early July and mid-September. Hence, the target was to identify the reasons for this variation in order to deduct the most suitable approach for predicting epidemic onset. Differences in cultivar resistance explained part of epidemic onset variability, as did different timings of canopy closure, presumably due to associated microclimate changes. Moreover, meteorological variables were considered as potential reasons for variation in epidemic onset. The weather-dependent infection probability was assessed by daily infection values (DIV) in the range from 0 to 1 using hourly weather data. For calculating DIVs, the temperature effect was quantified by the proportions of the latent period (LP) relative to the optimum at 20 to 25°C, established by artificial inoculation of sugar beet plants in growth cabinets. Artificial infection experiments further established that air relative humidity (RH) {\textgreater}95\% or leaf wetness was required for infection and subsequent lesion development. Under field conditions, the probability of leaf wetness was 75\% at RH {\textgreater}90\%. Therefore, DIVs were set to 0 for RH ≤90\% in the absence of precipitation (moisture index I). Alternatively, the effect of moisture was modeled with a sigmoidal function describing the occurrence of leaf wetness in dependence of RH in the field (moisture index II). Using this approach, DIV values were cumulated (c-DIV) for each of the 69 trials beginning either at fixed starting dates (1 May, 16 May, or 1 June) or the dates of canopy closure. Accumulation of DIV ended at the time of epidemic onset. The two different moisture index definitions had no significant influence on c-DIV; whereas, for starting time of summation of DIV, the date of canopy closure was more suitable. Values of c-DIV ranged from 7 to 19 in highly susceptible cultivars and 12 to 25 in cultivars with lower susceptibility. Given this variation, c-DIV values were insufficient to explain differences in the date of epidemic onset and thus were not considered suitable for making accurate and precise management decisions. However, a negative prognosis assessing the most likely periods of disease absence was possible by determining the minimum c-DIV as a threshold. This threshold was 7 c-DIV for highly susceptible cultivars and 12 c-DIV for cultivars with low susceptibility. Crop monitoring is recommended as soon as these threshold values are exceeded so that the exact epidemic onset time can be observed.},
+	number = {3},
+	urldate = {2023-07-04},
+	journal = {Phytopathology®},
+	author = {Wolf, P. F. J. and Verreet, J. A.},
+	month = mar,
+	year = {2005},
+	note = {Publisher: Scientific Societies},
+	keywords = {Beta vulgaris, economic damage threshold},
+	pages = {269--274},
+	file = {Full Text PDF:C\:\\Users\\uqpmello\\Zotero\\storage\\PGF8Y8YJ\\Wolf and Verreet - 2005 - Factors Affecting the Onset of Cercospora Leaf Spo.pdf:application/pdf},
+}
+
+@article{meier_phanologische_1993,
+	title = {Phänologische {Entwicklungsstadien} der {Beta}-{Rüben} ({Beta} vulgaris {L}. sspp.){Codierung} und {Beschreibung} nach der erweiterten {BBCH}-{Skala} mit {Abbildungen}},
+	volume = {45},
+	copyright = {https://creativecommons.org/licenses/by/4.0/},
+	url = {https://www.openagrar.de/receive/openagrar_mods_00067183},
+	abstract = {Mit den ausführlichen kulturspezifischen Beschreibungen ist diese spezielle Skala als Ergänzung zur „Allgemeinen BBCH-Skala" zu verstehen. Die phänologischen Entwicklungsstadien von Beta-Rüben werden beschrieben und in Entwicklungsphasen (Makrostadien) und stärker differenzierte Entwicklungsschritte (Mikrostadien) eingeteilt. Jedem Entwicklungsschritt wird ein zweistelliger Code zugeordnet, der nach dem Dezimalsystem aufgebaut ist. Damit wird Forderungen der Datenverarbeitung im pflanzenbaulichen Versuchswesen Rechnung getragen.},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-04},
+	journal = {Heft 2},
+	author = {Meier, Uwe and Bachmann, L. and Buhtz, E. and Hack, H. and Klose, R. and Märländer, B. and Weber, E.},
+	year = {1993},
+	pages = {37--41},
+	file = {Meier et al. - 1993 - Phänologische Entwicklungsstadien der Beta-Rüben (.pdf:C\:\\Users\\uqpmello\\Zotero\\storage\\JIY3L8IA\\Meier et al. - 1993 - Phänologische Entwicklungsstadien der Beta-Rüben (.pdf:application/pdf},
+}
