--- a/inst/cercospora.bib
+++ b/inst/cercospora.bib
@@ -244,3 +244,19 @@
 	pages = {37--41},
 	file = {Meier et al. - 1993 - Phänologische Entwicklungsstadien der Beta-Rüben (.pdf:C\:\\Users\\uqpmello\\Zotero\\storage\\JIY3L8IA\\Meier et al. - 1993 - Phänologische Entwicklungsstadien der Beta-Rüben (.pdf:application/pdf},
 }
+
+@article{wolf_zum_2001,
+	title = {Zum {Einfluss} des {Bestandesklimas} auf die {Prädisposition} der {Zuckerrübe} gegenüber {Infektionen} von {Cercospora} beticola ({Sacc}.) / {Influence} of sugar beet leaf mass development on predisposition of the crop to {Cercospora} beticola ({Sacc}.)},
+	volume = {108},
+	issn = {0340-8159},
+	url = {https://www.jstor.org/stable/43215404},
+	abstract = {Für die Prognose des Cercospora-Befalis in Zuckerrüben sind u. a. Kenntnisse der Erregerbiologie sowie über den Einfluss der Bestandesentwicklung auf das 'Mikroklima von Bedeutung. Für die pilzliche Entwicklung stellen im Allgemeinen Temperaturen im Bereich von 25—30 °C das Optimum dar. Eine Keimung von Konidien ist, wenngleich überproportional verzögert, bis in die Nähe des Gefrierpunktes möglich, die Inkubationszeit jedoch geht bereits bei Temperaturen unter 10 °C gegen unendlich. Ein quantitativer Einfluss der relativen Luftfeuchte ist nur im optimalen Bereich von 95-100 \% gegeben, diese ist somit weitgehend als qualitativer Einflussfaktor zu charakterisieren. Unter optimalen Voraussetzungen benötigt der Pilz von der Inokulation bis zum Erscheinen von Symptomen eine Inkubationszeit von 6-7 Tagen. Aus den Labordaten abgeleitete Funktionen beschreiben den Charakter der meteorologischen Einflussparameter und können zur Kalkulation von witterungsbedingten Infektionswahrscheinlichkeiten dienen. Mit der sukzessiven Entwicklung von Blattmasse geht eine deutliche Veränderung des Mikroklimas einher, welche insbesondere ab dem Zeitpunkt des Reihenschlusses wirksam wird. Die Temperaturen im Bestand sind geringfügig gesenkt, die relative Luftfeuchte jedoch liegt erhöht vor, ebenso wie die Blattnässedauer verlängert wird. Die biologischen Ansprüche von Cercospora beticola sind daher nach dem Reihenschluss in höherem Maße erfüllt. Die Tagesperiodik der Luftfeuchte weist nach dem Reihenschluss insbesondere tagsüber eine durchschnittliche Steigerung der Luftfeuchte um bis zu 10 \% auf, die Häufigkeit von Blattnässe ist um bis zu 35 \% erhöht, verglichen mit der Situation vor Reihenschluss. Als Konsequenz der meteorologischen Untersuchungen im Freiland ist für Termin-Prognosen der Verwendung von stündlichen Werten der Vorzug einzuräumen. Als flexibler Ausgangspunkt von Prognosekalkulationen wird der Zeitpunkt des Reihenschlusses vorgeschlagen, bzw. fixiert nach Kalendarium der Anfang Juni, als erfahrungsgemäßer Zeitpunkt des Eintretens. Important points for the prognosis of Cercospora leaf spot infection in sugar beet include knowledge of the causal agent biology as well as the influence of the crop canopy development on the microclimate. Representing the optimum conditions for fungus development are generally temperatures in the range of 25—30 °C. Germination of conidia is possible, even though over-proportionately reduced in intensity, at just above freezing point. The incubation period, however, proceeds to infinite even below 10 °C. The influence of moisture is only quantitative in the optimum range of 95-100 \% relative air humidity and, therefore, it can be characterised as a more qualitative influence parameter. Under optimum conditions, the fungus requires an incubation period of from 6 to 7 days from inoculation until occurrence of first symptoms. Functions derived from laboratory data describe the character of meteorological influence parameters and can help in the calculation of weather-influenced infection forecasting. The successive development of leaf mass is accompanied by a distinct alteration of the microclimate, especially effective from row closure onwards. The temperatures within the crop canopy are then slightly reduced. Relative air moisture content is increased, however, and the duration of leaf wetness is lengthened. The biological requirements of Cercospora beticola are thus fulfilled to a large extent after row closure. The daily periodicity of the relative air humidity as recorded in closed crops, in particular during daytime, indicates an average increase of up to 10 \%, the frequency of leaf wetness is increased by up to 35 \% compared with before row closure. The influence of crop canopy development is reduced during nighttime. As a consequence of the meteorological investigations in-field, the use of hourly data proved advantageous for treatment date prognosis. As flexible starting point for forecast calculations, the time of row closure is advised, or the beginning of June when a fixed calendar date is preferred, as experience has shown that this is when canopy closure commences.},
+	number = {6},
+	urldate = {2023-07-05},
+	journal = {Zeitschrift für Pflanzenkrankheiten und Pflanzenschutz / Journal of Plant Diseases and Protection},
+	author = {Wolf, P. F. J. and Heindl, M. and Verreet, J. A.},
+	year = {2001},
+	note = {Publisher: Verlag Eugen Ulmer KG},
+	pages = {578--592},
+	file = {JSTOR Full Text PDF:C\:\\Users\\uqpmello\\Zotero\\storage\\EIQYVVZW\\Wolf et al. - 2001 - Zum Einfluss des Bestandesklimas auf die Prädispos.pdf:application/pdf},
+}
