--- a/Notes - Sim model for management C.beticola in SB.Rmd
+++ b/Notes - Sim model for management C.beticola in SB.Rmd
@@ -1,10 +1,10 @@
 ---
-title: Enhancing weather-based disease forecast with remote sensing: An openenly available cercospora leaf spot simulation model to aid disease detection in sugarbeet
+title: "Enhancing weather-based disease forecast with remote sensing: An openenly available cercospora leaf spot simulation model to aid disease detection in sugarbeet"
 author: 
-  - Dr. Rene Heim, Universität Bonn and Institut für Zuckerrübenforschung
-  - Dr. Paul Melloy, The University of Queensland  
-  - Nathan Okole, University of Gottingen  
-  - Facundo Ispizua, Institut für Zuckerrübenforschung
+  - "Dr. Rene Heim, Universität Bonn and Institut für Zuckerrübenforschung"
+  - "Dr. Paul Melloy, The University of Queensland"  
+  - "Nathan Okole, University of Gottingen"  
+  - "Facundo Ispizua, Institut für Zuckerrübenforschung"
 date: "`r Sys.Date()`"
 output: html_document
 bibliography: inst/cercospora.bib
