--- a/vignettes/Getting-started.Rmd
+++ b/vignettes/Getting-started.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Setup and Requirements  
+
 ```{r setup}
 library(cercospoRa)
 library(data.table)
@@ -21,14 +23,14 @@ library(data.table)
 
 The `cercospoRa` package estimates the proportional progress towards a 
 *Cercospora beticola* epidemic on sugarbeet.
-This requires formated hourly weather data that the model recognises.
+This requires formated hourly weather data in a format which the model recognises.
 The R package `epiphytoolR` contains functions which automatically checks the weather
 data and returns it in the required hourly format.  
 
-We will need to install epiphytoolR  
+We will need to install `epiphytoolR`  
 
 ```{r}
-# install stationaRy package if it is not installed
+# install epiphytoolR package if it is not installed
 if("epiphytoolR" %in% installed.packages()[,1] == FALSE){
   remotes::install_github("PaulMelloy/epiphytoolR", dependencies = TRUE)
 }
@@ -36,73 +38,11 @@ library(epiphytoolR)
 ```
 
 
-Next lets download some weather data using the R package `nasapower`.  
-
-```{r eval=FALSE, include=TRUE}
-# install stationaRy package if it is not installed
-if("nasapower" %in% installed.packages()[,1] == FALSE){
-  install.packages("nasapower")
-}
-library(nasapower)
-
-np <- get_power(
-  community = "ag",
-  pars = c(
-    "RH2M", # Relative humidity at 2 meters
-    "T2M", # Air temperature at 2 meters
-    "WS2M", # wind speed at 2 meters,
-    "WD2M",# wind direction at 2 meters,
-    "PRECTOTCORR",
-    "ALLSKY_SFC_SW_DWN", # short wave downward solar radiation at the earth surface
-    "ALLSKY_SFC_LW_DWN", # long wave downward solar radiation at the earth surface
-    "PS", # surface pressure
-    "ALLSKY_SRF_ALB" # Surface albedo
-  ),
-  temporal_api = "hourly",
-  lonlat = c(9.916,51.41866),
-  dates = c("2018-02-01", "2022-12-08"),
-  time_standard = "UTC"
-)
-
-# set as a data.table
-setDT(np)
-
-# give the weather data a station name
-np$station <- "Belgium"
-# provide a wind direction standard deviation
-np$WDSD <- 20
-
-# format weather
-w_beau <- 
-  format_weather(np,
-                 time_zone = "UTC",
-                 temp = "T2M",
-                 rain = "PRECTOTCORR",
-                 YYYY = "YEAR",
-                 MM = "MO",
-                 DD = "DY",
-                 hh = "HR",
-                 rh = "RH2M",
-                 ws = "WS2M",
-                 wd = "WD2M",
-                 wd_sd = "WDSD",
-                 station = "station",
-                 lon = "LON", 
-                 lat = "LAT"
-                 )
-```
-
-```{r eval=FALSE, include=TRUE}
-calc_epidemic_onset(start = as.POSIXct("2022-04-25",tz = "UTC"),
-                    end = as.POSIXct("2022-09-30",tz = "UTC"),
-                    c_closure = as.POSIXct("2022-07-01",tz = "UTC"),
-                    weather = w_beau)
-```
 
 ### Format weather station data  
 
 This is data recorded by a weather station and contributed by Facundo Ramón Ispizua Yamati
-and is from a sugarbeet field trial.  
+and is from a sugar beet field trial.  
 
 We will format the data so the model functions can recognise the data and won't 
 return errors due to inconsistencies and NAs which are common in weather data. 
@@ -153,9 +93,15 @@ wthr <- format_weather(wthr,
 # We can elect to turn the data_check off so 
 ```
 
-We can find the epidemic start date by calling the `calc_epidemic_onset()` function.
-This function is a wrapper for the `calc_DIV()` function which calculates the daily
-infection values for both, Wolf and Racca methods.
+
+## Calculate epidemic onset  
+
+The following function calculates the earliest date from which a cercospora leaf
+spot epidemic could commence. 
+`start` and `end` provide the time window for which the model should run.
+Canopy closure (`c_closure`) indicates when the model should start point for the 
+model.
+
 
 This date is determined by the negative prognosis models to be the last day for 
 which a epidemic is likely not to start.  
@@ -167,17 +113,71 @@ cercospoRa::calc_epidemic_onset(start = as.POSIXct("2022-04-25",tz = "UTC"),
                     weather = wthr)
 ```
 
-  
-`calc_DIV()` will do this for all the days in the weather data frame provided, starting at 
-the first day, integrating over the hourly data.  
+
+## Estimate canopy closure  
+
+Canopy closure is tradionally observed manually. 
+The following methods permits canopy closure date estimation from remotley sensed
+data.
+UAV or satelite data can be used to produce georeferenced leaf area index (LAI)
+rasters. 
 
 ```{r}
-divalues <- calc_DIV(dat = wthr[times > as.POSIXct("2022-07-01")])
+# Get file location of example rasters with LAI values
+image_files <- list.files(system.file("extdata", "uav_img",package = "cercospoRa"),
+                          pattern = "tif",
+                          full.names = TRUE)
 
-# we take the cumulative sum of the daily infection values to monitor the increasing
-# risk of infection from cercospora
-divalues[, DIV_sum := cumsum(DIV)]
-divalues
+# Read in data and check for consistancy  
+epidemic_onset_param <-
+  read_sb_growth_parameter(img_files = image_files,
+                           img_dates = as.POSIXct(c("2022-06-14","2022-06-28"),
+                                                  tz = "UTC"),
+                           target_res = 10)
+
+epidemic_onset_param
 ```
 
+The next function calculates the sugar beet growth rate. 
+
+```{r}
+param_rxt <- calc_r_x0(epidemic_onset_param,
+                      min_r = 0.02,
+                      max_r = 0.05,
+                      k = 6)
+```
+
+Calculate canopy closure uses a logistic regression to estimate the canopy closure 
+date for each raster cell.
+
+```{r}
+canopy_closure <- calc_c_closure(param_rxt,
+                                 x1 = 1.3,
+                                 k=6)
+```
+
+Finally we can use a specialised wrapper function to calculate the earliest possible
+onset of a cercospora leaf spot epidemic when chemical intervention might be needed.
+
+```{r}
+epidemic_onset_map <- 
+  calc_epidemic_onset_from_image(start =as.POSIXct("2022-04-25",tz = "UTC"),
+                                 end = as.POSIXct("2022-09-30",tz = "UTC"),
+                                 c_closure = canopy_closure,
+                                 weather = wthr)
+epidemic_onset_map
+```
+
+plot the heterogeneity of onset date
+
+```{r}
+terra::plot(epidemic_onset_map)
+```
+
+Convert numeric date back to POSIXct format
+```{r}
+as.POSIXct(terra::values(epidemic_onset_map)[120:130],
+           tz = "UTC",
+           origin = "1970-01-01")
+```
 
