Update url redirect

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -43,7 +43,7 @@
 	title = {Weather-{Based} {Predictive} {Modeling} of {Cercospora} beticola {Infection} {Events} in {Sugar} {Beet} in {Belgium}},
 	volume = {7},
 	issn = {2309-608X},
-	url = {https://pmc.ncbi.nlm.nih.gov/articles/PMC8470031/},
+	url = {https://www.mdpi.com/2309-608X/7/9/777},
 	doi = {10.3390/jof7090777},
 	abstract = {Cercospora leaf spot (CLS; caused by Cercospora beticola Sacc.) is the most widespread and damaging foliar disease of sugar beet. Early assessments of CLS risk are thus pivotal to the success of disease management and farm profitability. In this study, we propose a weather-based modelling approach for predicting infection by C. beticola in sugar beet fields in Belgium. Based on reported weather conditions favoring CLS epidemics and the climate patterns across Belgian sugar beet-growing regions during the critical infection period (June to August), optimum weather conditions conducive to CLS were first identified. Subsequently, 14 models differing according to the combined thresholds of air temperature (T), relative humidity (RH), and rainfall (R) being met simultaneously over uninterrupted hours were evaluated using data collected during the 2018 to 2020 cropping seasons at 13 different sites. Individual model performance was based on the probability of detection (POD), the critical success index (CSI), and the false alarm ratio (FAR). Three models (i.e., M1, M2 and M3) were outstanding in the testing phase of all models. They exhibited similar performance in predicting CLS infection events at the study sites in the independent validation phase; in most cases, the POD, CSI, and FAR values were ≥84\%, ≥78\%, and ≤15\%, respectively. Thus, a combination of uninterrupted rainy conditions during the four hours preceding a likely start of an infection event, RH {\textgreater} 90\% during the first four hours and RH {\textgreater} 60\% during the following 9 h, daytime T {\textgreater} 16 °C and nighttime T {\textgreater} 10 °C, were the most conducive to CLS development. Integrating such weather-based models within a decision support tool determining fungicide spray application can be a sound basis to protect sugar beet plants against C. beticola, while ensuring fungicides are applied only when needed throughout the season.},
 	number = {9},
